--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,11 @@
+name: Test
+
 on:
-  pull_request: [opened, edited]
+  pull_request:
+    types: [opened, edited]
+    branches:
+      - '*'
+
 
 jobs:
   test_pull:
